# sre-store-helfy

./: .env.example  .gitignore  CLAUDE.md  README.md  README.original.md  ai-log.md  docker-compose.yml  guidelines.md  initial.md  metric-catalog.md  progress.md
ai-service/: Dockerfile  pyproject.toml
ai-service/ai_service/: __init__.py  app.py  config.py  llm.py  mcp_server.py  prompts.py  report.py  tools.py
ai-service/tests/: _fakes.py  conftest.py  test_agent.py  test_config.py  test_llm.py  test_mcp.py  test_prompts.py  test_report.py  test_tools.py
backend/: package-lock.json  package.json
backend/src/: index.ts  logger.ts  metrics.ts  util.ts
backend/src/routes/: auth.ts  cart.ts  checkout.ts  orders.ts  payment.ts  products.ts
docs/: dashboard-state.json  mcp.md  sample-investigation.json
filebeat/: filebeat.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
grafana/dashboards/: user-journey.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
prometheus/: prometheus.yml
scripts/: drive-traffic.sh
