[project]
name = "ai-service"
version = "0.1.0"
description = "AI observability agent — multi-turn tool-calling against Prometheus + Elasticsearch via OpenRouter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "openai>=1.50,<2.0",
    "httpx>=0.27,<0.30",
    "pydantic>=2.7,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
